{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 17,
  "lineage": "df347c8a-0815-b730-0c7c-8b5e074e648e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f67b41c184e6472",
            "domain": "vpc",
            "id": "eipalloc-07f67b41c184e6472",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-206-138-17.compute-1.amazonaws.com",
            "public_ip": "18.206.138.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myeip"
            },
            "tags_all": {
              "Name": "myeip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:internet-gateway/igw-00817d9d00f33270b",
            "id": "igw-00817d9d00f33270b",
            "owner_id": "243324621241",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f67b41c184e6472",
            "connectivity_type": "public",
            "id": "nat-0cdae2ef5e057b7a2",
            "network_interface_id": "eni-00ae64cbf5db7e9f3",
            "private_ip": "10.0.1.241",
            "public_ip": "18.206.138.17",
            "subnet_id": "subnet-0cf901223e8a713fc"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_subnet.public1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070c730c47f23ffa51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cdae2ef5e057b7a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070c730c47f23ffa5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.mygw",
            "aws_route_table.private",
            "aws_subnet.public1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00817d9d00f33270b",
            "id": "r-rtb-02bb8400b9573b1831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bb8400b9573b183",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:route-table/rtb-070c730c47f23ffa5",
            "id": "rtb-070c730c47f23ffa5",
            "owner_id": "243324621241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:route-table/rtb-02bb8400b9573b183",
            "id": "rtb-02bb8400b9573b183",
            "owner_id": "243324621241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0084a618f38acc516",
            "route_table_id": "rtb-070c730c47f23ffa5",
            "subnet_id": "subnet-0042d910e86eea50c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fdd4062725def92",
            "route_table_id": "rtb-070c730c47f23ffa5",
            "subnet_id": "subnet-0c1d404c2f8f151ea"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e084408b22686cc0",
            "route_table_id": "rtb-02bb8400b9573b183",
            "subnet_id": "subnet-0cf901223e8a713fc"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de7628fddef42929",
            "route_table_id": "rtb-02bb8400b9573b183",
            "subnet_id": "subnet-013255da344f7ba47"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-0042d910e86eea50c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0042d910e86eea50c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-0c1d404c2f8f151ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d404c2f8f151ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-0cf901223e8a713fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf901223e8a713fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-013255da344f7ba47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013255da344f7ba47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0f8f90d51befca0f5"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:vpc/vpc-0f8f90d51befca0f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ab3521e0aa90a81",
            "default_route_table_id": "rtb-00b8c13d04fd45197",
            "default_security_group_id": "sg-0af2175080dcef2f2",
            "dhcp_options_id": "dopt-023db81bc53c74dab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8f90d51befca0f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b8c13d04fd45197",
            "owner_id": "243324621241",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}